# HElib

examples/: CMakeLists.txt
examples/BGV_bit_encryption/: CMakeLists.txt  README.md  method1_per_bit.cpp  method2_nonsimd_packed.cpp  method3_simd_packed.cpp  method4_gf2d_simd.cpp
include/helib/: Ctxt.h
src/: Ctxt.cpp
tests/: TestCtxt.cpp
